--- a/GpsPreview/MainPage.xaml
+++ b/GpsPreview/MainPage.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:Maps="using:Windows.UI.Xaml.Controls.Maps"
+	xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -13,7 +14,7 @@
 		<Maps:MapControl x:Name="map" ZoomLevel="11"></Maps:MapControl>
 		
 		<StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="30" Background="AliceBlue" Opacity="0.8">
-			<TextBlock x:Name="textOutput" Padding="10" Height="300" />
+			<TextBlock x:Name="textOutput" Padding="10" Height="100" />
 		</StackPanel>
 
 		<StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Center">
@@ -22,13 +23,48 @@
 			<Button x:Name="sqliteTest" Click="sqliteTest_Click" HorizontalAlignment="Center" Margin="10">SQLite</Button>
 		</StackPanel>
 
-		
-			<Viewbox Width="256" Height="256"  HorizontalAlignment="Right" VerticalAlignment="Top">
-			<Border BorderThickness="1" >
-				<Canvas x:Name="vectorCanvas" Background="White" Width="4096" Height="4096"></Canvas>
-			</Border>
+		<StackPanel Orientation="Horizontal">
+			<canvas:CanvasControl x:Name="win2dCanvas" Draw="CanvasControl_Draw" ClearColor="White" Width="512" Height="512" HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7"/>
+
+			<!--<Viewbox Width="512" Height="512"  HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7">
+				<Canvas x:Name="vectorCanvasLeft" Background="White" Width="512" Height="512">
+					<Canvas.RenderTransform>
+						<RotateTransform CenterX="2048" CenterY="2048" Angle="{Binding ElementName=tileRotation, Mode=OneWay, Path=Value}"></RotateTransform>
+					</Canvas.RenderTransform>
+					<Canvas.Clip>
+						<RectangleGeometry Rect="0 0 4096 4096" />
+					</Canvas.Clip>
+				</Canvas>
 			</Viewbox>
+
+			<Viewbox Width="512" Height="512"  HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7">
+				<Canvas x:Name="vectorCanvas" Background="White" Width="512" Height="512">
+					<Canvas.RenderTransform>
+						<RotateTransform CenterX="2048" CenterY="2048" Angle="{Binding ElementName=tileRotation, Mode=OneWay, Path=Value}"></RotateTransform>
+					</Canvas.RenderTransform>
+					<Canvas.Clip>
+						<RectangleGeometry Rect="0 0 4096 4096" />
+					</Canvas.Clip>
+				</Canvas>
+			</Viewbox>
+
+			<Viewbox Width="512" Height="512"  HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7">
+				<Canvas x:Name="vectorCanvasRight" Background="White" Width="512" Height="512">
+					<Canvas.RenderTransform>
+						<RotateTransform CenterX="2048" CenterY="2048" Angle="{Binding ElementName=tileRotation, Mode=OneWay, Path=Value}"></RotateTransform>
+					</Canvas.RenderTransform>
+					<Canvas.Clip>
+						<RectangleGeometry Rect="0 0 4096 4096" />
+					</Canvas.Clip>
+				</Canvas>
+			</Viewbox>-->
+		</StackPanel>
 		
+		
+			
+
+		<Slider Orientation="Horizontal" x:Name="tileRotation" Minimum="-360" Maximum="360" Value="0" Width="300" Height="32" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20"/>
+
 
 	</Grid>
 </Page>
