--- a/GpsPreview/MainPage.xaml
+++ b/GpsPreview/MainPage.xaml
@@ -21,50 +21,12 @@
 			<Button x:Name="gpsButton" Click="gpsButton_Click" HorizontalAlignment="Center" Margin="10">GPS</Button>
 			<Button x:Name="updateButton" Click="updateButton_Click" HorizontalAlignment="Center" Margin="10">update</Button>
 			<Button x:Name="sqliteTest" Click="sqliteTest_Click" HorizontalAlignment="Center" Margin="10">SQLite</Button>
+			<Button x:Name="loadTile" Click="loadTile_Click" HorizontalAlignment="Center" Margin="10">Load Manual</Button>
 		</StackPanel>
 
-		<StackPanel Orientation="Horizontal">
-			<canvas:CanvasControl x:Name="win2dCanvas" Draw="CanvasControl_Draw" ClearColor="White" Width="1024" Height="1024" HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.85"/>
-
-			<!--<Viewbox Width="512" Height="512"  HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7">
-				<Canvas x:Name="vectorCanvasLeft" Background="White" Width="512" Height="512">
-					<Canvas.RenderTransform>
-						<RotateTransform CenterX="2048" CenterY="2048" Angle="{Binding ElementName=tileRotation, Mode=OneWay, Path=Value}"></RotateTransform>
-					</Canvas.RenderTransform>
-					<Canvas.Clip>
-						<RectangleGeometry Rect="0 0 4096 4096" />
-					</Canvas.Clip>
-				</Canvas>
-			</Viewbox>
-
-			<Viewbox Width="512" Height="512"  HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7">
-				<Canvas x:Name="vectorCanvas" Background="White" Width="512" Height="512">
-					<Canvas.RenderTransform>
-						<RotateTransform CenterX="2048" CenterY="2048" Angle="{Binding ElementName=tileRotation, Mode=OneWay, Path=Value}"></RotateTransform>
-					</Canvas.RenderTransform>
-					<Canvas.Clip>
-						<RectangleGeometry Rect="0 0 4096 4096" />
-					</Canvas.Clip>
-				</Canvas>
-			</Viewbox>
-
-			<Viewbox Width="512" Height="512"  HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.7">
-				<Canvas x:Name="vectorCanvasRight" Background="White" Width="512" Height="512">
-					<Canvas.RenderTransform>
-						<RotateTransform CenterX="2048" CenterY="2048" Angle="{Binding ElementName=tileRotation, Mode=OneWay, Path=Value}"></RotateTransform>
-					</Canvas.RenderTransform>
-					<Canvas.Clip>
-						<RectangleGeometry Rect="0 0 4096 4096" />
-					</Canvas.Clip>
-				</Canvas>
-			</Viewbox>-->
+		<StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" Margin="0,2,0,-2" VerticalAlignment="Stretch">
+			<canvas:CanvasControl x:Name="win2dCanvas" Draw="CanvasControl_Draw" ClearColor="White" Width="768" Height="768" HorizontalAlignment="Right" VerticalAlignment="Top" Opacity="0.85" />
 		</StackPanel>
-		
-		
-			
-
-		<Slider Orientation="Horizontal" x:Name="tileRotation" Minimum="-360" Maximum="360" Value="0" Width="300" Height="32" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="20"/>
-
 
 	</Grid>
 </Page>
